@@ -136,6 +136,8 @@ FIXES
 
  * Search filter popup dialog visible also if grid is no more displayed
 
+ * Unlock cards or processes on accordion change
+
 
 
 
